--- a/styles/partials/blocks/__social-media.scss
+++ b/styles/partials/blocks/__social-media.scss
@@ -27,10 +27,14 @@
   //Icon white
   &__whatsapp_white {
     background-image: url("../src/icons/social-media/icon-whatsapp-white.svg");
+    transition-property: background-image;
+    transition-duration: 500ms;
   }
 
   &__telegramm_white {
     background-image: url("../src/icons/social-media/icon-telegramm-white.svg");
+    transition-property: background-image;
+    transition-duration: 500ms;
   }
 
   &__whatsapp_white:hover {
