correct styles for mozila

--- a/styles/partials/blocks/__service-menu.scss
+++ b/styles/partials/blocks/__service-menu.scss
@@ -80,16 +80,14 @@
   background: $color-gold;
 }
 
-.scroll-body::-moz-scrollbar {
-  width: 5px; /* здесь задается ширина скрола, в данном случае он не будет отображен */
-  background: #fff;
-}
-
-.scroll-body::-moz-scrollbar-thumb {
-  background: $color-gold;
+.scroll-body::-webkit-scrollbar {
+  max-height: auto;
+  overflow-y: auto;
 }
 
 .scroll-body {
   max-height: auto;
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: $color-gold #fff;
 }
