--- a/pages/style.css
+++ b/pages/style.css
@@ -117,8 +117,6 @@ body {
 }
 .social-media__telegramm_white {
   background-image: url("../src/icons/social-media/icon-telegramm-white.svg");
-  transition-property: background-image;
-  transition-duration: 500ms;
 }
 .social-media__whatsapp_white:hover {
   background-image: url("../src/icons/social-media/icon-whatsapp-gold.svg");
@@ -253,18 +251,16 @@ body {
   background: rgba(255, 217, 0, 0.702);
 }
 
-.scroll-body::-moz-scrollbar {
-  width: 5px; /* здесь задается ширина скрола, в данном случае он не будет отображен */
-  background: #fff;
-}
-
-.scroll-body::-moz-scrollbar-thumb {
-  background: rgba(255, 217, 0, 0.702);
+.scroll-body::-webkit-scrollbar {
+  max-height: auto;
+  overflow-y: auto;
 }
 
 .scroll-body {
   max-height: auto;
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 217, 0, 0.702) #fff;
 }
 
 .section-exptitle__title {
