--- a/styles/partials/blocks/__card.scss
+++ b/styles/partials/blocks/__card.scss
@@ -78,7 +78,7 @@
 }
 
 .card_theme-dark {
-  background-color: $color-dark;
+  background-color: $color-brown;
 
   .card__icon {
     background-color: #fff;
