--- a/styles/partials/blocks/__logo.scss
+++ b/styles/partials/blocks/__logo.scss
@@ -4,7 +4,8 @@
     text-decoration: none;
     width: 245px;
     height: 60px;
-    background: url("../src/background/logo/logo-bg.png") no-repeat right;
+    background: url("../src/background/logo/logo-bg.png") no-repeat bottom right
+      15px;
     margin-right: auto;
   }
 
