--- a/styles/partials/blocks/__footer.scss
+++ b/styles/partials/blocks/__footer.scss
@@ -30,7 +30,8 @@
     text-decoration: none;
     width: 245px;
     height: 60px;
-    background: url("../src/background/logo/logo-bg.png") no-repeat right;
+    background: url("../src/background/logo/logo-bg.png") no-repeat bottom right
+      15px;
   }
 
   &__logo-text {
