--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -73,3 +73,24 @@
   background: url("../src/background/title/patent-title.jpg") no-repeat bottom;
   background-size: cover;
 }
+
+.title-bg-polygraph {
+  background: url("../src/background/title/polygraph-title.jpg") no-repeat
+    center;
+  background-size: cover;
+}
+
+.title-bg-psycho {
+  background: url("../src/background/title/psycho-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-law {
+  background: url("../src/background/title/law-title.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.title-bg-portrait {
+  background: url("../src/background/title/portrait-title.jpg") no-repeat top;
+  background-size: cover;
+}
