--- a/styles/partials/blocks/__footer.scss
+++ b/styles/partials/blocks/__footer.scss
@@ -26,12 +26,12 @@
   }
 
   &__logo-link {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     text-decoration: none;
     width: 245px;
     height: 60px;
-    background: url("../src/background/logo/logo-bg.png") no-repeat bottom right
-      15px;
   }
 
   &__logo-text {
@@ -115,5 +115,25 @@
   &__copyright-text {
     font-size: 14px;
     font-weight: 300;
+  }
+}
+
+//Медиа-запросы
+@media (max-width: 860px) {
+  .footer {
+    &__top-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+    }
+
+    &__info {
+      margin-top: 25px;
+    }
+
+    &__menu {
+      margin-top: 15px;
+    }
   }
 }
