--- a/styles/partials/blocks/__section-about.scss
+++ b/styles/partials/blocks/__section-about.scss
@@ -43,3 +43,33 @@
     hyphens: auto;
   }
 }
+
+//Медиа-запросы
+@media (max-width: 1250px) {
+  .section-about {
+    &__img {
+      max-width: 450px;
+    }
+
+    &__info-text {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 970px) {
+  .section-about {
+    &__body {
+      grid-template-columns: none;
+      grid-template-rows: repeat(2, 1fr);
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .section-about {
+    &__img {
+      max-width: 350px;
+    }
+  }
+}
