--- a/styles/partials/blocks/__section-reviews.scss
+++ b/styles/partials/blocks/__section-reviews.scss
@@ -51,15 +51,15 @@
     justify-content: center;
     width: 50px;
     height: 50px;
-    background-color: $color-red;
+    background-color: #fff;
     border-radius: 50%;
     overflow: hidden;
     margin-right: 10px;
   }
 
   &__avatar-img {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
   }
 
   &__user-info {
