--- a/styles/partials/blocks/__header.scss
+++ b/styles/partials/blocks/__header.scss
@@ -15,3 +15,15 @@
     padding-bottom: 5px;
   }
 }
+
+//Медиа=запросы
+@media (max-width: 810px) {
+  .header {
+    &__top {
+      flex-direction: column;
+      height: auto;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
