--- a/styles/partials/blocks/__section-about.scss
+++ b/styles/partials/blocks/__section-about.scss
@@ -66,10 +66,34 @@
   }
 }
 
+@media (max-width: 700px) {
+  .section-about {
+    &__body {
+      grid-template-rows: 1fr 2fr;
+    }
+
+    &__media {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  }
+}
+
 @media (max-width: 750px) {
   .section-about {
     &__img {
       max-width: 350px;
+    }
+  }
+}
+
+@media (max-width: 380px) {
+  .section-about {
+    &__body {
+      grid-template-rows: 1fr 3fr;
+    }
+    &__img {
+      max-width: 300px;
     }
   }
 }
