--- a/styles/partials/blocks/__slogans.scss
+++ b/styles/partials/blocks/__slogans.scss
@@ -56,3 +56,41 @@
     margin-bottom: 0;
   }
 }
+
+//Медиа-запросы
+@media (max-width: 820px) {
+  .slogans {
+    .slogans__text {
+      font-size: 20px;
+    }
+  }
+}
+
+@media (max-width: 520px) {
+  .slogans {
+    .slogans__text {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 470px) {
+  .slogans {
+    .slogans__text {
+      font-size: 16px;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .slogans {
+    &__list {
+      top: 15px;
+      left: 15px;
+    }
+
+    .slogans__text {
+      font-size: 14px;
+    }
+  }
+}
