--- a/styles/partials/blocks/__backgrounds.scss
+++ b/styles/partials/blocks/__backgrounds.scss
@@ -94,3 +94,8 @@
   background: url("../src/background/title/portrait-title.jpg") no-repeat top;
   background-size: cover;
 }
+
+.title-bg-contacts {
+  background: url("../src/background/title/contacts.jpg") no-repeat center;
+  background-size: cover;
+}
