--- a/styles/partials/blocks/__logo.scss
+++ b/styles/partials/blocks/__logo.scss
@@ -20,12 +20,12 @@
 
   &__square-text {
     font-size: 32px;
-    color: $color-white;
+    color: #000;
   }
 
   &__text {
     font-size: 32px;
-    color: $color-white;
+    color: #000;
   }
 }
 
