--- a/styles/partials/blocks/__contacts.scss
+++ b/styles/partials/blocks/__contacts.scss
@@ -17,7 +17,7 @@
       padding: 3px 0;
       font-size: 25px;
       font-weight: 400;
-      color: $color-white;
+      color: #000;
       transition-property: color;
     }
 
