--- a/styles/partials/blocks/__service-menu.scss
+++ b/styles/partials/blocks/__service-menu.scss
@@ -132,6 +132,7 @@
 @media (max-width: 550px) {
   .service-menu {
     display: block;
+    padding: 16px 0px;
     flex-direction: column;
     align-items: flex-start;
     flex: 1;
