--- a/styles/partials/blocks/__contacts.scss
+++ b/styles/partials/blocks/__contacts.scss
@@ -22,7 +22,7 @@
     }
 
     .contacts__link:hover {
-      color: $color-gold;
+      color: rgb(180, 47, 47);
       transition-duration: 500ms;
     }
   }
