--- a/pages/style.css
+++ b/pages/style.css
@@ -485,7 +485,7 @@ body {
 
 .slogans__body {
   position: relative;
-  padding-bottom: 20%;
+  padding-bottom: 30%;
   overflow: hidden;
   background: url("../src/background/slogans/video-screenshot.png") no-repeat center;
   background-size: cover;
@@ -533,26 +533,34 @@ body {
   margin-bottom: 0;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1120px) {
   .slogans .slogans__text {
     font-size: 20px;
+    margin-bottom: 10px;
   }
 }
-@media (max-width: 520px) {
+@media (max-width: 840px) {
   .slogans .slogans__text {
     font-size: 18px;
   }
 }
-@media (max-width: 470px) {
-  .slogans .slogans__text {
-    font-size: 16px;
-  }
-}
-@media (max-width: 450px) {
+@media (max-width: 770px) {
   .slogans__list {
     top: 15px;
     left: 15px;
   }
+}
+@media (max-width: 680px) {
+  .slogans .slogans__text {
+    font-size: 16px;
+  }
+}
+@media (max-width: 600px) {
+  .slogans .slogans__text {
+    font-size: 14px;
+  }
+}
+@media (max-width: 455px) {
   .slogans .slogans__text {
     font-size: 14px;
   }
