--- a/styles/partials/blocks/__slogans.scss
+++ b/styles/partials/blocks/__slogans.scss
@@ -1,7 +1,7 @@
 .slogans {
   &__body {
     position: relative;
-    padding-bottom: 20%;
+    padding-bottom: 30%;
     overflow: hidden;
     background: url("../src/background/slogans/video-screenshot.png") no-repeat
       center;
@@ -58,15 +58,16 @@
 }
 
 //Медиа-запросы
-@media (max-width: 820px) {
+@media (max-width: 1120px) {
   .slogans {
     .slogans__text {
       font-size: 20px;
+      margin-bottom: 10px;
     }
   }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 840px) {
   .slogans {
     .slogans__text {
       font-size: 18px;
@@ -74,7 +75,16 @@
   }
 }
 
-@media (max-width: 470px) {
+@media (max-width: 770px) {
+  .slogans {
+    &__list {
+      top: 15px;
+      left: 15px;
+    }
+  }
+}
+
+@media (max-width: 680px) {
   .slogans {
     .slogans__text {
       font-size: 16px;
@@ -82,13 +92,16 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
   .slogans {
-    &__list {
-      top: 15px;
-      left: 15px;
+    .slogans__text {
+      font-size: 14px;
     }
+  }
+}
 
+@media (max-width: 455px) {
+  .slogans {
     .slogans__text {
       font-size: 14px;
     }
