--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,3 +24,4 @@
 @import "partials/blocks/_footer";
 @import "partials/blocks/_burger-menu";
 @import "partials/blocks/_slider";
+@import "partials/blocks/_btn";
