--- a/styles/partials/__palette.scss
+++ b/styles/partials/__palette.scss
@@ -16,9 +16,15 @@ $color-bg-footer: rgba(58, 98, 139, 0.8);
 $color-dark: rgb(45, 32, 58);
 $color-bordo: rgb(125, 43, 65);
 $color-red: rgba(209, 40, 63, 0.8);
-$color-gold: rgba(255, 217, 0, 0.702);
-$color-white: rgba(255, 225, 240, 1);
+
 $color-peach: rgba(246, 191, 171, 0.9);
 $color-brown: rgba(191, 97, 85, 0.8);
 $color-leather: rgba(165, 1, 35, 0.5);
 $color-bg-gray: rgba(58, 98, 139, 0.8);
+
+//Most new palette
+
+$color-red: rgb(180, 47, 47);
+$color-black: #000;
+$color-white: #fff;
+$color-gold: rgba(255, 217, 0, 0.702);
