--- a/styles/partials/blocks/__main.scss
+++ b/styles/partials/blocks/__main.scss
@@ -3,6 +3,7 @@
     padding: 0 10px;
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-right: 50px;
     background-color: $color-white;
     height: 100%;
 
