--- a/styles/partials/blocks/__section-about.scss
+++ b/styles/partials/blocks/__section-about.scss
@@ -1,9 +1,10 @@
 .section-about {
+  margin-bottom: 20px;
+
   &__title {
-    background-color: $color-peach;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    color: $color-brown;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: $color-black;
   }
 
   &__body {
@@ -14,7 +15,6 @@
   &__media {
     display: flex;
     justify-content: center;
-    background-color: $color-brown;
     padding-top: 15px;
     padding-bottom: 15px;
   }
@@ -28,7 +28,7 @@
     padding-left: 35px;
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: $color-leather;
+    background-color: $color-red;
   }
 
   &__info-text {
@@ -41,6 +41,14 @@
     margin-bottom: 10px;
     line-height: 1.25;
     hyphens: auto;
+  }
+
+  &__btn {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 150px;
   }
 }
 
