--- a/styles/partials/blocks/__slider.scss
+++ b/styles/partials/blocks/__slider.scss
@@ -22,15 +22,14 @@
     margin-right: 8px;
     width: 20px;
     height: 20px;
-    border: 1.5px solid $color-red;
+    border: 2px solid $color-red;
     border-radius: 50%;
-    background-color: $color-bg-gray-light;
     appearance: none;
     cursor: pointer;
   }
 
   &__mark:checked {
-    background-color: $color-peach;
+    background-color: $color-red;
   }
 
   &__mark:last-child {
